--- a/blocks/profile/__text-box/profile__text-box.css
+++ b/blocks/profile/__text-box/profile__text-box.css
@@ -1,7 +1,6 @@
 .profile__text-box {
   max-width: 450px;
   position: relative;
-  word-wrap: break-word;
 }
 
 @media screen and (max-width: 1023px) {
